# iadpython

./: pyproject.toml
src/iadpython/: __init__.py  ad.py  combine.py  fresnel.py  grid.py  iad.py  iadc.py  iadcommand.py  nist.py  quadrature.py  redistribution.py  rxt.py  sphere.py  start.py
