[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "iadpython"

dynamic = ["version"]
dependencies = ["numpy", "scipy"]
description = 'Forward and inverse radiative transport using adding-doubling'

keywords = [
    "absorption",
    "scattering",
    "reflection",
    "transmission",
    "optical properties",
    "radiative transport",
    "optical properties",
    "scattering coefficient",
    "scattering anisotropy",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.dynamic]
version = { attr = "iadpython.__version__" }


[tool.ruff]
line-length = 100
ignore = ["F403", "F841"]
exclude =['.git', '__pycache__', 'docs']
